k8s/creation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tierlist-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tierlist-backend
  template:
    metadata:
      labels:
        app: tierlist-backend
    spec:
      containers:
        - name: tierlist-backend
          image: ahmadal/tierlist-backend:latest  # Uses the latest backend image from Docker Hub
          ports:
            - containerPort: 3001  # Exposes port 3001 inside the container
