k8s/stats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-service
  template:
    metadata:
      labels:
        app: stats-service
    spec:
      containers:
        - name: stats-service
          image: ahmadal/stats-service:latest  # Uses the latest stats-service image
          imagePullPolicy: Always               # Forces Kubernetes to always pull the latest image
          ports:
            - containerPort: 3002              # Exposes port 3002 inside the container
