k8s/creation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tierlist-backend-service
  labels:
    app: tierlist-backend
spec:
  selector:
    app: tierlist-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001  # Forwards traffic to port 3001 on the matching pods
  type: ClusterIP  # Internal service accessible only within the cluster
