k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tierlist-backend-service
spec:
  type: NodePort
  selector:
    app: tierlist-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30080
